# aes_cli

./: CHANGELOG.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.zh-CN.md  encipherr.py  main.py  pyproject.toml
encipherr_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
i18n/: README.de.md  README.es.md  README.fr.md  README.it.md  README.zh-CN.md
scripts/: selftest.sh
